# stapler

./: .gitignore  next.conf.js  next.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  config.toml  lib.rs  main.rs
src/app/: layout.js  page.js
src/app/cube/: page.js
src/app/download/: page.js
src/app/ftp/: page.js
src/app/http/web_static/: page.js
src/app/json/: page.js
src/app/memo/: memo.module.css  page.js
src/app/mysql/: page.js
src/app/mysql/manage/: page.js
src/app/quickjs/: page.js
src/app/request/: page.js
src/app/rsvr/: Convert.js  Download.js  Parse.js  page.js
src/app/s3/: page.js
src/app/server/: AddServer.js  DownloadFile.js  ExecuteCmd.js  ExecuteScript.js  FileManage.js  K3s.js  K3sDeploy.js  K3sNode.js  K3sPod.js  K3sSvc.js  LoadImage.js  Output.js  UploadFile.js  action.js  page.js  page.jsssss  store.js
src/app/web/qrcode/: page.js
src/app/web/tool/: page.js
src/app/work/: page.js
src/app/workx/: page.js
src/component/: ClickToCopy.js  JSONEditor.js  MDEditor.js  MDViewer.js
src/config/: menu.js
src/plugins/: image.js
src/store/: PageInit.js
src/styles/: globals.css
src/util/: api.js  cache.js  common.js  database.js  invoke.js  json-to-go.js
