[package]
name = "tauri-tool2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_tool2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = {version = "0.21.2"}
rust-embed="6.7.0"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["full"] }
zip = "0.5.12"
bytes = "1.0"
tar = "0.4"
flate2 = "1.0"
scraper = "0.12.0"
ssh2 = "0.9.4"
rust_box = { path = "../../rust_box" }
aws-config = "1.6.2"
